--- a/scss/style.css
+++ b/scss/style.css
@@ -1,4 +1,5 @@
 body {
+  overflow-x: hidden;
   margin: 0;
   padding: 0;
   font-family: 'Montserrat', sans-serif;
@@ -25,7 +26,7 @@ body {
         body .wrapper header .container .burger {
           display: none; }
           body .wrapper header .container .burger .no-active {
-            display: none; }
+            display: none !important; }
           body .wrapper header .container .burger .burger__click {
             display: flex;
             flex-direction: column; }
@@ -67,7 +68,8 @@ body {
             body .wrapper header .container .header__menu .menu__list .menu__item:not(:last-child) {
               margin: 0 21px 0 0; }
     body .wrapper .page {
-      flex: 1 1 auto; }
+      flex: 1 1 auto;
+      position: relative; }
       body .wrapper .page .page_main-block {
         position: relative; }
         body .wrapper .page .page_main-block .container .main__body {
@@ -167,13 +169,13 @@ body {
           line-height: 57px;
           text-align: center; }
         body .wrapper .page .advantages .advantages__container .advantages__header .header__text {
+          margin: 10px auto 50px;
+          max-width: 511px;
           font-size: 14px;
           font-weight: 500;
           line-height: 20px;
           text-align: center;
-          color: #737373;
-          margin: 10px auto 50px;
-          max-width: 511px; }
+          color: #737373; }
         body .wrapper .page .advantages .advantages__container .advantages__body {
           display: grid;
           grid-template-columns: repeat(4, 1fr);
@@ -210,6 +212,344 @@ body {
               color: #fff; }
             body .wrapper .page .advantages .advantages__container .advantages__body .advantages__column .advantages__item:hover .icon__svg {
               fill: #fff; }
+      body .wrapper .page .page__practice {
+        padding: 80px 0; }
+        body .wrapper .page .page__practice .practice__header .practice__title {
+          font-size: 40px;
+          font-weight: 700;
+          line-height: 57px;
+          text-align: center; }
+        body .wrapper .page .page__practice .practice__header .practice__subtitle {
+          margin: 10px auto 50px;
+          max-width: 511px;
+          font-size: 14px;
+          font-weight: 500;
+          line-height: 20px;
+          text-align: center;
+          color: #737373; }
+        body .wrapper .page .page__practice .practice__body {
+          display: grid;
+          grid-template-columns: repeat(4, 1fr);
+          grid-gap: 30px; }
+          body .wrapper .page .page__practice .practice__body .practice__column .practice__item {
+            box-shadow: 0px 13px 19px rgba(0, 0, 0, 0.07);
+            padding: 30px 35px;
+            background: #FFFFFF;
+            transition: all 0.7s ease;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            height: 100%; }
+            body .wrapper .page .page__practice .practice__body .practice__column .practice__item .practice__content {
+              flex: 1 1 auto;
+              padding: 30px 35px; }
+              body .wrapper .page .page__practice .practice__body .practice__column .practice__item .practice__content .practice__content_title {
+                color: #252B42;
+                text-decoration: none;
+                font-size: 16px;
+                line-height: 24px;
+                font-weight: 700;
+                transition: all 0.7s ease;
+                display: block; }
+              body .wrapper .page .page__practice .practice__body .practice__column .practice__item .practice__content .practice__content_title:hover {
+                color: #0D5C63; }
+              body .wrapper .page .page__practice .practice__body .practice__column .practice__item .practice__content .practice__content_subtitle {
+                font-size: 14px;
+                line-height: 20px;
+                font-weight: 500;
+                margin-top: 10px; }
+            body .wrapper .page .page__practice .practice__body .practice__column .practice__item .practice__content_image {
+              display: grid; }
+              body .wrapper .page .page__practice .practice__body .practice__column .practice__item .practice__content_image img {
+                width: 100%;
+                transition: all 1s  ease; }
+          body .wrapper .page .page__practice .practice__body .practice__column:hover .practice__content_image img {
+            opacity: 0.7; }
+      body .wrapper .page .page__whoweare {
+        padding: 80px 0;
+        background-color: #fff; }
+        body .wrapper .page .page__whoweare .whoweare__header .whoweare__title {
+          font-size: 40px;
+          font-weight: 700;
+          line-height: 57px;
+          text-align: center; }
+        body .wrapper .page .page__whoweare .whoweare__header .whoweare__subtitle {
+          margin: 10px auto 50px;
+          max-width: 511px;
+          font-size: 14px;
+          font-weight: 500;
+          line-height: 20px;
+          text-align: center;
+          color: #737373; }
+        body .wrapper .page .page__whoweare .whoweare__body {
+          display: grid;
+          grid-template-columns: 1fr 1fr;
+          grid-gap: 100px; }
+          body .wrapper .page .page__whoweare .whoweare__body .whoweare__content {
+            max-width: 333px; }
+            body .wrapper .page .page__whoweare .whoweare__body .whoweare__content .whoweare__content_title {
+              font-size: 36px;
+              font-weight: 700;
+              line-height: 50px; }
+            body .wrapper .page .page__whoweare .whoweare__body .whoweare__content .whoweare__content_subtitle {
+              margin: 10px auto 0;
+              font-size: 14px;
+              font-weight: 500;
+              line-height: 20px;
+              color: #737373; }
+            body .wrapper .page .page__whoweare .whoweare__body .whoweare__content .whoweare__content_items .whoweare__item {
+              margin-left: 40px; }
+              body .wrapper .page .page__whoweare .whoweare__body .whoweare__content .whoweare__content_items .whoweare__item .item__body_title {
+                font-size: 16px;
+                font-weight: 700;
+                line-height: 24px; }
+              body .wrapper .page .page__whoweare .whoweare__body .whoweare__content .whoweare__content_items .whoweare__item .item__body_text {
+                font-size: 14px;
+                font-weight: 600;
+                line-height: 24px;
+                color: #737373; }
+            body .wrapper .page .page__whoweare .whoweare__body .whoweare__content .whoweare__content_items .item_top:before {
+              content: "";
+              display: inline-block;
+              width: 32px;
+              height: 32px;
+              top: 32px;
+              right: 40px;
+              position: relative;
+              background: url(../images/icons/who_1.png); }
+            body .wrapper .page .page__whoweare .whoweare__body .whoweare__content .whoweare__content_items .item_bottom:before {
+              content: "";
+              display: inline-block;
+              width: 32px;
+              height: 32px;
+              top: 32px;
+              right: 40px;
+              position: relative;
+              background: url(../images/icons/who_2.png); }
+      body .wrapper .page .page__clients {
+        padding: 58px 0; }
+        body .wrapper .page .page__clients .clients__items {
+          display: grid;
+          justify-content: space-between;
+          grid-template-columns: repeat(6, 1fr);
+          align-items: center; }
+          body .wrapper .page .page__clients .clients__items .clients__item {
+            display: grid;
+            align-items: center;
+            transition: all 0.7s ease;
+            justify-content: center; }
+          body .wrapper .page .page__clients .clients__items .clients__item:hover {
+            transform: translateY(-5px); }
+      body .wrapper .page .page__subscribe {
+        position: relative;
+        padding-bottom: 20px; }
+        body .wrapper .page .page__subscribe .subscribe__body {
+          position: relative;
+          z-index: 2;
+          background-color: #17213c;
+          padding: 30px 50px;
+          margin: 0 30px;
+          border: 2px;
+          display: flex;
+          justify-content: space-between;
+          align-items: center; }
+          body .wrapper .page .page__subscribe .subscribe__body .subscribe__title {
+            color: #fff;
+            font-size: 24px;
+            line-height: 32px;
+            font-weight: 700;
+            flex: 0 1 50%;
+            max-width: 266px; }
+          body .wrapper .page .page__subscribe .subscribe__body .subscribe__form {
+            flex: 0 1 50%;
+            display: flex;
+            align-items: center;
+            border-radius: 5px;
+            transition: all 0.5s ease; }
+            body .wrapper .page .page__subscribe .subscribe__body .subscribe__form .subscribe__input {
+              flex: 1 1 auto;
+              padding: 0 20px;
+              min-height: 50px;
+              background-color: #f9f9f9;
+              border: 1px solid #e6e6e6;
+              border-radius: 5px 0 0 5px;
+              border-right: 0;
+              outline: none; }
+            body .wrapper .page .page__subscribe .subscribe__body .subscribe__form .subscribe__btn {
+              flex: 1 1 auto;
+              padding: 0 20px;
+              min-height: 52px;
+              background-color: #FF7B47;
+              border: 1px solid #e6e6e6;
+              border-radius: 0 5px 5px 0;
+              align-items: center;
+              justify-content: center; }
+          body .wrapper .page .page__subscribe .subscribe__body .subscribe__form:hover {
+            box-shadow: #0D5C63 2px 2px 5px 3px; }
+      body .wrapper .page .page__subscribe:before {
+        content: "";
+        position: absolute;
+        height: 77px;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        background-color: #252B42; }
+      body .wrapper .page .get {
+        padding: 80px 0; }
+        body .wrapper .page .get .get__header .get__title {
+          font-size: 40px;
+          font-weight: 700;
+          line-height: 57px;
+          text-align: center; }
+        body .wrapper .page .get .get__header .get__subtitle {
+          margin: 10px auto 50px;
+          max-width: 511px;
+          font-size: 14px;
+          font-weight: 500;
+          line-height: 20px;
+          text-align: center;
+          color: #737373; }
+        body .wrapper .page .get .get__body {
+          display: flex;
+          justify-content: space-between; }
+          body .wrapper .page .get .get__body .get__item {
+            align-items: center;
+            display: flex;
+            flex-direction: column;
+            box-shadow: 0px 13px 19px rgba(0, 0, 0, 0.07);
+            padding: 30px 35px;
+            background: #FFFFFF;
+            transition: all 0.7s ease; }
+            body .wrapper .page .get .get__body .get__item .get__icon {
+              margin-bottom: 20px; }
+            body .wrapper .page .get .get__body .get__item .get__emails {
+              justify-content: center;
+              display: flex;
+              flex-direction: column;
+              text-align: center;
+              font-size: 14px;
+              line-height: 24px;
+              font-weight: 600;
+              margin-bottom: 20px; }
+              body .wrapper .page .get .get__body .get__item .get__emails .get_email {
+                text-decoration: none;
+                color: #252b42;
+                transition: all 0.7s ease; }
+            body .wrapper .page .get .get__body .get__item .get__label {
+              font-size: 16px;
+              line-height: 24px;
+              font-weight: 700;
+              margin-bottom: 20px; }
+            body .wrapper .page .get .get__body .get__item .get__btn {
+              font-size: 14px;
+              line-height: 24px;
+              font-weight: 600;
+              padding: 10px 20px;
+              background-color: transparent;
+              color: #FF7B47;
+              border: 1px solid #FF7B47;
+              text-decoration: none;
+              border-radius: 5px;
+              transition: all 0.7s ease; }
+          body .wrapper .page .get .get__body .get__item:hover {
+            transform: translateY(-5px);
+            background-color: #0D5C63;
+            color: #fff; }
+            body .wrapper .page .get .get__body .get__item:hover .icon__svg {
+              fill: #fff; }
+            body .wrapper .page .get .get__body .get__item:hover .get__emails .get_email {
+              color: #fff; }
+            body .wrapper .page .get .get__body .get__item:hover .get__emails .get_email:hover {
+              color: #FF7B47; }
+            body .wrapper .page .get .get__body .get__item:hover .get__btn:hover {
+              background-color: #FF7B47;
+              color: #fff; }
+      body .wrapper .page .contact {
+        background-color: #fff;
+        padding: 40px 0; }
+        body .wrapper .page .contact .contact__body {
+          display: flex;
+          justify-content: space-between;
+          align-items: center; }
+          body .wrapper .page .contact .contact__body .contact__text .contact__title {
+            font-size: 24px;
+            line-height: 32px;
+            font-weight: 700; }
+          body .wrapper .page .contact .contact__body .contact__text .contact__subtitle {
+            font-size: 14px;
+            line-height: 20px;
+            font-weight: 500; }
+          body .wrapper .page .contact .contact__body .contact_btn {
+            padding: 15px 40px;
+            background-color: #FF7B47;
+            color: #fff;
+            font-size: 14px;
+            line-height: 28px;
+            font-weight: 700;
+            border-radius: 5px;
+            text-decoration: none;
+            border: 1px solid #FF7B47;
+            transition: all 0.7s ease; }
+          body .wrapper .page .contact .contact__body .contact_btn:hover {
+            background-color: transparent;
+            color: #FF7B47; }
+    body .wrapper footer .footer__top {
+      background-color: #17213c;
+      padding: 50px 0; }
+      body .wrapper footer .footer__top .top__items {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1.5fr; }
+        body .wrapper footer .footer__top .top__items .top__item {
+          display: grid;
+          justify-content: center; }
+          body .wrapper footer .footer__top .top__items .top__item .item__title {
+            font-size: 16px;
+            font-weight: 700;
+            line-height: 24px;
+            color: #fff; }
+          body .wrapper footer .footer__top .top__items .top__item .item__content .footer__list {
+            list-style: none;
+            padding: 0; }
+            body .wrapper footer .footer__top .top__items .top__item .item__content .footer__list .footer__list_item a {
+              text-decoration: none;
+              color: #fff;
+              font-size: 14px;
+              font-weight: 600;
+              line-height: 24px;
+              transition: all 0.7s ease; }
+            body .wrapper footer .footer__top .top__items .top__item .item__content .footer__list .footer__list_item a:hover {
+              color: #FF7B47; }
+            body .wrapper footer .footer__top .top__items .top__item .item__content .footer__list .top_mail a,
+            body .wrapper footer .footer__top .top__items .top__item .item__content .footer__list .top_map a,
+            body .wrapper footer .footer__top .top__items .top__item .item__content .footer__list .top_telephone a {
+              margin-left: 25px; }
+            body .wrapper footer .footer__top .top__items .top__item .item__content .footer__list .top_mail:before,
+            body .wrapper footer .footer__top .top__items .top__item .item__content .footer__list .top_map:before,
+            body .wrapper footer .footer__top .top__items .top__item .item__content .footer__list .top_telephone:before {
+              content: "";
+              display: inline-block;
+              width: 24px;
+              height: 24px;
+              top: 8px;
+              right: 24px; }
+            body .wrapper footer .footer__top .top__items .top__item .item__content .footer__list .top_telephone:before {
+              background: url(../images/footer/footer_tel.png); }
+            body .wrapper footer .footer__top .top__items .top__item .item__content .footer__list .top_map:before {
+              background: url(../images/footer/footer_map.png); }
+            body .wrapper footer .footer__top .top__items .top__item .item__content .footer__list .top_mail:before {
+              background: url(../images/footer/footer_mail.png); }
+    body .wrapper footer .footer__bottom .container {
+      display: flex;
+      justify-content: space-between;
+      padding: 20px 0; }
+      body .wrapper footer .footer__bottom .container .bottom__text {
+        font-size: 14px;
+        font-weight: 600;
+        line-height: 24px; }
+      body .wrapper footer .footer__bottom .container .bottom__icons {
+        display: flex; }
+        body .wrapper footer .footer__bottom .container .bottom__icons .bottom__icon:not(:last-child) {
+          margin-right: 20px; }
 
 @media (min-width: 576px) {
   .container {
